<resources>
    <string name="app_name">adj-FeelsBook</string>
    <string name="view_records">View Log</string>
    <string name="love_button">😍</string>
    <string name="joy_button">😊</string>
    <string name="surprise_button">😮</string>
    <string name="anger_button">😠</string>
    <string name="sadness_button">😢</string>
    <string name="fear_button">😨</string>
    <string name="add_comment_edittext">Add Comment (optional, 100 chars.)</string>
    <string name="delete_record_dialog_title">Delete Record</string>
    <string name="delete_record_dialog_message">Are you sure you want to delete this record?</string>
    <string name="delete_record_dialog_confirm">Delete</string>
    <string name="delete_record_dialog_cancel">Cancel</string>
    <string name="comment_dialog_confirm">Add Comment</string>
    <string name="comment_dialog_decline">Cancel</string>
    <string name="edit_record_title">Edit Record</string>
    <string name="delete_record">Delete</string>
    <string name="save_record">Save</string>
    <string name="cancel_edit_record">Cancel</string>
    <string name="love_count">😍x</string>
    <string name="joy_count">😊x</string>
    <string name="surprise_count">😮x</string>
    <string name="anger_count">😠x</string>
    <string name="sadness_count">😢x</string>
    <string name="fear_count">😨x</string>

</resources>
