<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/emotionListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loveCountTextView">

    </ListView>

    <TextView
        android:id="@+id/joyCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/joy_count"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/surpriseCountTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/loveCountTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/surpriseCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/surprise_count"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/angerCountTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/joyCountTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/angerCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/anger_count"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/sadnessCountTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/surpriseCountTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sadnessCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sadness_count"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/fearCountTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/angerCountTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fearCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fear_count"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sadnessCountTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loveCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/love_count"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/joyCountTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>